<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="44dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/border_bg"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tviPurchaseTotalStock"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:gravity="center"
                                android:text="@string/PurchaseTotalStock"
                                android:textSize="12sp"
                                app:fontFamily="@font/roboto" />

                            <View
                                android:id="@+id/viPurchaseTotalStock"
                                android:layout_width="match_parent"
                                android:layout_height="3dp"
                                android:background="@color/login_btn_color" />

                        </LinearLayout>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/color_border" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tviPurchaseStock0to15Days"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:gravity="center"
                                android:text="@string/PurchaseStock0to15Days"
                                android:textSize="12sp"
                                app:fontFamily="@font/roboto" />

                            <View
                                android:id="@+id/viPurchaseStock0to15Days"
                                android:layout_width="match_parent"
                                android:layout_height="3dp"
                                android:background="@color/login_btn_color"
                                android:visibility="invisible" />

                        </LinearLayout>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/color_border" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tviPurchaseStock16to30Days"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:gravity="center"
                                android:text="@string/PurchaseStock16to30Days"
                                android:textSize="12sp"
                                app:fontFamily="@font/roboto" />

                            <View
                                android:id="@+id/viPurchaseStock16to30Days"
                                android:layout_width="match_parent"
                                android:layout_height="3dp"
                                android:background="@color/login_btn_color"
                                android:visibility="invisible" />

                        </LinearLayout>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/color_border" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tviPurchaseStock31to60Days"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:gravity="center"
                                android:text="@string/PurchaseStock31to60Days"
                                android:textSize="12sp"
                                app:fontFamily="@font/roboto" />

                            <View
                                android:id="@+id/viPurchaseStock31to60Days"
                                android:layout_width="match_parent"
                                android:layout_height="3dp"
                                android:background="@color/login_btn_color"
                                android:visibility="invisible" />

                        </LinearLayout>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/color_border" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tviPurchaseStock61to90Days"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:gravity="center"
                                android:text="@string/PurchaseStock61to90Days"
                                android:textSize="12sp"
                                app:fontFamily="@font/roboto" />

                            <View
                                android:id="@+id/viPurchaseStock61to90Days"
                                android:layout_width="match_parent"
                                android:layout_height="3dp"
                                android:background="@color/login_btn_color"
                                android:visibility="invisible" />

                        </LinearLayout>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/color_border" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tviPurchaseStockgreater90Days"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:gravity="center"
                                android:text="@string/PurchaseStockgreater90Days"
                                android:textSize="12sp"
                                app:fontFamily="@font/roboto" />

                            <View
                                android:id="@+id/viPurchaseStockgreater90Days"
                                android:layout_width="match_parent"
                                android:layout_height="3dp"
                                android:background="@color/login_btn_color"
                                android:visibility="invisible" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Amount"
                        android:textSize="12sp"
                        app:fontFamily="@font/source_sans_pro" />

                    <TextView
                        android:id="@+id/tviAmounts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/logistics_amount"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/montserrat" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:overScrollMode="never"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/color_heading" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@color/color_heading_bg"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:text="Customer Name"
                                android:textColor="@color/color_heading"
                                android:textSize="13sp"
                                app:fontFamily="@font/roboto_medium" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:minWidth="80dp"
                                android:text="Item No."
                                android:textColor="@color/color_heading"
                                android:textSize="13sp"
                                app:fontFamily="@font/roboto_medium" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:text="Description"
                                android:textColor="@color/color_heading"
                                android:textSize="13sp"
                                app:fontFamily="@font/roboto_medium" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:text="Purchaser Name"
                                android:textColor="@color/color_heading"
                                android:textSize="13sp"
                                app:fontFamily="@font/roboto_medium" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:minWidth="15dp"
                                android:text="Amount"
                                android:textColor="@color/color_heading"
                                android:textSize="13sp"
                                app:fontFamily="@font/roboto_medium" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:text="NOD"
                                android:textColor="@color/color_heading"
                                android:textSize="13sp"
                                app:fontFamily="@font/roboto_medium" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/color_heading" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rviData"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="200dp" />
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>